# CV-Microservice-Project

./: .env.example  .gitignore  docker-compose.yml
services/back/: Dockerfile  README.md  pyproject.toml
services/back/back/: main.py
services/cv2_img_search/: Dockerfile  README.md  pyproject.toml
services/cv2_img_search/cv2_img_search/: collage_maker.py  image_searching_hsv.py  image_searching_lab.py  main.py
services/db_service/: Dockerfile
services/db_service/db_service/: img_db.py  main.py  models.py
services/db_service/init_scripts/: init_base.sql
services/model_img_search/: Dockerfile  README.md  pyproject.toml
services/model_img_search/model_img_search/: clip_img_search.py  grid_plot.py  main.py  resnet_img_search.py
services/processor_images/: Dockerfile  pyproject.toml
services/processor_images/processor_images/: img_processing.py  main.py
services/scraper/: Dockerfile  pyproject.toml
services/scraper/scraper/: main.py  scraper.py
