[tool.poetry]
name = "cv2-img-search"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = "^2.6.4"
numpy = "^1.26.4"
scikit-image = "^0.22.0"
opencv-python-headless = "^4.9.0.80"
python-multipart = "^0.0.9"

[tool.poetry.scripts]
app = "cv2_img_search.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
