[tool.poetry]
name = "processor-images"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = "^2.6.4"
aiohttp = "^3.9.3"
asyncio = "^3.4.3"
numpy = "^1.26.4"
opencv-python-headless = "^4.9.0.80"
rembg = "^2.0.56"

[tool.poetry.scripts]
app = "processor_images.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
